# data-view

./: .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/workflows/: release.yml
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: commands.rs  crypto.rs  error.rs  export.rs  lib.rs  main.rs  model.rs  state.rs  storage.rs
apps/desktop/src-tauri/src/db/: mod.rs  mssql.rs  mysql.rs  postgres.rs
apps/desktop/src/transport/: tauri-transport.ts
apps/desktop/src/zoom/: ZoomController.tsx  useDesktopZoom.ts
apps/web/: .env.example  next.config.mjs  package.json  tsconfig.json
apps/web/src/: auth.config.ts  auth.ts  middleware.ts
apps/web/src/app/: app-shell-client.tsx  layout.tsx  page.tsx
apps/web/src/app/api/connections/: route.ts
apps/web/src/app/api/connections/[id]/: route.ts
apps/web/src/app/api/connections/test/: route.ts
apps/web/src/app/api/folders/: route.ts
apps/web/src/app/api/folders/[id]/: route.ts
apps/web/src/app/api/signup/: route.ts
apps/web/src/app/api/tags/: route.ts
apps/web/src/app/api/tags/[id]/: route.ts
apps/web/src/app/login/: page.tsx
apps/web/src/server/: connections-repo.ts  crypto.ts  folders-repo.ts  respond.ts  session.ts  storage.ts  tags-repo.ts  users-repo.ts
apps/web/src/server/db/: index.ts  mssql.ts  mysql.ts  postgres.ts  types.ts
apps/web/src/transport/: web-transport.ts
scripts/: release.sh
(+12 files in other folders)
