[package]
name = "data-view-desktop"
version = "1.0.1"
description = "Data View — visor de bases de datos"
authors = ["Data View"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "data_view_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = [] }
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"

# Async runtime
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "net", "fs"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Errors / utility
thiserror = "1"
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1"
parking_lot = "0.12"
base64 = "0.22"

# Encryption for stored passwords
aes-gcm = "0.10"
rand = "0.8"
argon2 = "0.5"

# Database drivers
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1", "with-uuid-1"] }
postgres-types = { version = "0.2", features = ["with-chrono-0_4", "with-serde_json-1", "with-uuid-1"] }
mysql_async = { version = "0.34", default-features = false, features = ["default-rustls"] }
tiberius = { version = "0.12", default-features = false, features = ["rustls", "chrono"] }
tokio-util = { version = "0.7", features = ["compat"] }
rust_decimal = { version = "1", features = ["db-tokio-postgres"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
